--- a/worker-verification-admin/index.html
+++ b/worker-verification-admin/index.html
@@ -2,10 +2,11 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Panel de administración del equipo de ADS" />
-    <title>ADS Admin</title>
+    <meta name="description" content="Panel de administración del equipo de ADS - Worker Verification" />
+    <title>ADS Admin - Worker Verification</title>
   </head>
   <body>
     <div id="root"></div>
